--- a/style.css
+++ b/style.css
@@ -1,1 +1,72 @@
+.page{
+  width: 780px;
+  margin:auto;
+  font-size: 16px;
+  font-family : 'Source sans Pro', Calibri, Tahoma, sans-serif;
+  padding:40px;
+  border: 5px solid #3388CC;
+  border-radius: 10px;
+  box-shadow : 2px 4px 3px black;
+  background-color : #FFFFFF;
+}
 
+.infophoto{
+  height: 250px;
+}
+
+.info{
+  float: left;
+}
+.photo{
+  float: right;
+}
+.section{
+  margin-bottom: 70px;
+  text-align: justify;
+}
+.section:hover{
+  color : #00BB00;
+}
+.sec-gauche{
+  float:left;
+  font-weight: bold;
+  font-size: 20px;
+}
+.sec-droite{
+  margin-left: 150px;
+  margin-top: 34px;
+}
+.strong{
+  font-size: 26px;
+}
+h2{
+  font-size:28px;
+  color : #3388BB;
+  text-transform: uppercase;
+  border-bottom: 3px solid #3388DD;
+}
+.duree{
+  font-weight: normal;
+  font-style: italic;
+  font-size: 16px;
+}
+.titre{
+  font-weight: bold;
+  font-size: 20px;
+}
+#forma-gauche p{
+  margin-bottom: 32px;
+}
+#exp-gauche p{
+  margin-bottom: 15px;
+
+}
+body{
+  background-color: #CCCCCC;
+}
+#langue p{
+  margin-top:20px;
+}
+.fdp p{
+  margin-top:7px;
+}
